@@ -52,7 +52,7 @@ test message.
 ****
 sleep 1
 killdaemon
-no_msglog_check
+sudo rm DIR/spool/db/retry
 #
 #
 #
@@ -65,6 +65,7 @@ test message.
 ****
 sleep 1
 killdaemon
+sudo rm DIR/spool/db/retry
 #
 #
 #
@@ -82,3 +83,4 @@ killdaemon
 #
 #
 #
+no_msglog_check
